syntax = "proto3";

option go_package = "github.com/AhmedShaabanElhdad/goMicroService-grpc-graphQl/order/pb";

package pb;

message Order {

    message OrderProduct {
        string id = 1;
        string name = 2;
        string description = 3;
        double price = 4;
        uint32 quantity = 5;
    }

    string id = 1;
    double price = 2;
    string accountId = 3;
    bytes createdAt = 4;
    repeated OrderProduct products = 5;
    // double discount = 6;
    // string promoCode = 7;
}

message PostOrderRequest {
    message OrderProduct {
        string productId = 1;
        uint32 quantity = 2;
    }

    string accountId = 2;
    repeated OrderProduct products = 4;
}


message PostOrderResponse {
    Order order = 1;
}

message GetOrderRequest {
    string id = 1;
}

message GetOrderResponse {
    Order order = 1;
}

message GetAccountOrdersRequest {
    string accountId = 1;
}

message GetAccountOrdersResponse {
    repeated Order orders = 1;
}


service OrderService {
    rpc PostOrder (PostOrderRequest) returns (PostOrderResponse){
    }
    rpc GetOrderId (GetOrderRequest) returns (GetOrderResponse){   
    }
    rpc GetAccountOrders (GetAccountOrdersRequest) returns (GetAccountOrdersResponse){
    }
}

